# zephyr

doc/develop/west/: zephyr-cmds.rst
doc/develop/west/dtsh/: handbook.rst
scripts/: west-commands.yml
scripts/dts/dtsh/: .gitignore  chkrfc.sh  init-rfc-workspace.sh  pyproject.toml
scripts/dts/dtsh/src/dtsh/: shell.py
scripts/west_commands/: dtsh.py
